--- a/styles/cads-support/index.scss
+++ b/styles/cads-support/index.scss
@@ -2,10 +2,15 @@
 // @cads-support: index
 // ========================================================
 //
+
+//normalize
+@import "./lib/normalize.scss";
+
 // variables
 @import "./lib/variables.scss";
 
 // modules
+@import "./lib/background-colors.scss";
 @import "./lib/background-position.scss";
 @import "./lib/background-size.scss";
 @import "./lib/border-colors.scss";
@@ -17,6 +22,7 @@
 @import "./lib/box-sizing.scss";
 @import "./lib/clear-fix.scss";
 @import "./lib/coordinates.scss";
+@import "./lib/cursor.scss";
 @import "./lib/display.scss";
 @import "./lib/flexbox.scss";
 @import "./lib/floats.scss";
@@ -28,5 +34,8 @@
 @import "./lib/hovers.scss";
 @import "./lib/letter-spacing.scss";
 @import "./lib/line-height.scss";
+@import "./lib/outline.scss";
+@import "./lib/position.scss";
 @import "./lib/spacing.scss";
+@import "./lib/text-colors.scss";
 @import "./lib/typography.scss";
