--- a/styles/cads-support/lib/cursor.scss
+++ b/styles/cads-support/lib/cursor.scss
@@ -4,9 +4,9 @@
 //
 
 .pointer {
-  cursor: pointer
+  cursor: pointer !important;
 }
 
 .hover-pointer:hover {
-  cursor: pointer
+  cursor: pointer !important;
 }
