--- a/styles/cads-support/lib/box-sizing.scss
+++ b/styles/cads-support/lib/box-sizing.scss
@@ -1,51 +1,60 @@
-// ========================================================
-// @cads-support: box-sizing
-// ========================================================
-//
+// // ========================================================
+// // @cads-support: box-sizing
+// // ========================================================
+// //
 
-html,
-body,
-div,
-article,
-section,
-main,
-footer,
-header,
-form,
-fieldset,
-legend,
-pre,
-code,
-a,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-li,
-dl,
-dt,
-dd,
-textarea,
-table,
-td,
-th,
-tr,
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
-button,
-.border-box {
+// html,
+// body,
+// div,
+// article,
+// section,
+// main,
+// footer,
+// header,
+// form,
+// fieldset,
+// legend,
+// pre,
+// code,
+// a,
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6,
+// p,
+// ul,
+// ol,
+// li,
+// dl,
+// dt,
+// dd,
+// textarea,
+// table,
+// td,
+// th,
+// tr,
+// input[type="email"],
+// input[type="number"],
+// input[type="password"],
+// input[type="tel"],
+// input[type="text"],
+// input[type="url"],
+// button,
+// .border-box {
+//   box-sizing: border-box;
+// }
+
+
+
+
+html {
   box-sizing: border-box;
 }
 
-.content-box {
-  box-sizing: content-box;
+*,
+*:after,
+*:before {
+  box-sizing: inherit;
 }
