added sass map for colors

--- a/styles/cads-support/index.scss
+++ b/styles/cads-support/index.scss
@@ -26,6 +26,8 @@
 @import "./lib/display.scss";
 @import "./lib/flexbox.scss";
 @import "./lib/floats.scss";
+@import "./lib/focus.scss";
+@import "./lib/font-colors.scss";
 @import "./lib/font-family.scss";
 @import "./lib/font-style.scss";
 @import "./lib/font-weight.scss";
@@ -37,7 +39,6 @@
 @import "./lib/outline.scss";
 @import "./lib/position.scss";
 @import "./lib/spacing.scss";
-@import "./lib/text-colors.scss";
 @import "./lib/typography.scss";
 @import "./lib/zindex.scss";
 
