--- a/styles/cads-support/lib/border-colors.scss
+++ b/styles/cads-support/lib/border-colors.scss
@@ -3,111 +3,11 @@
 // ========================================================
 //
 
-// NOTE:
-// flaky cascade causes issues with states such as :checked, :hover and :focus.
-// these colours need to be in a specific order because of this... 
-// [REFACTOR].
+@each $color-name,
+$color-value in $color-list {
+  $i: index($color-list, $color-name);
 
-/*
-BORDER COLORS
-Border colors can be used to extend the base
-border classes ba,bt,bb,br,bl found in the _borders.css file.
-The base border class by default will set the color of the border
-to that of the current text color. These classes are for the cases
-where you desire for the text and border colors to be different.
-Base:
-  b = border
-
-modifiers: --color-name = each color variable name is also a border color name
-  */
-.b--black {
-  border-color: $black !important;
-}
-
-.b--dark-grey {
-  border-color: $dark-grey !important;
-}
-
-.b--mid-grey {
-  border-color: $mid-grey !important;
-}
-
-.b--grey {
-  border-color: $grey !important;
-}
-
-.b--light-grey {
-  border-color: $light-grey !important;
-}
-
-.b--pale-grey {
-  border-color: $pale-grey !important;
-}
-
-.b--heritage-blue {
-  border-color: $heritage-blue !important;
-}
-
-.b--heritage-blue-40 {
-  border-color: $heritage-blue-40 !important;
-}
-
-.b--blue-dark {
-  border-color: $blue-dark !important;
-}
-
-.b--blue-primary {
-  border-color: $blue-primary !important;
-}
-
-.b--blue-mid {
-  border-color: $blue-mid !important;
-}
-
-.b--blue-light {
-  border-color: $blue-light !important;
-}
-
-.b--heritage-yellow {
-  border-color: $heritage-yellow !important;
-}
-
-.b--heritage-yellow-40 {
-  border-color: $heritage-yellow-40 !important;
-}
-
-.b--red-primary {
-  border-color: $red-primary !important;
-}
-
-.b--red-light {
-  border-color: $red-light !important;
-}
-
-.b--turquoise-dark {
-  border-color: $turquoise-dark !important;
-}
-
-.b--turqouise-primary {
-  border-color: $turqouise-primary !important;
-}
-
-.b--turqouise-mid {
-  border-color: $turqouise-mid !important;
-}
-
-.b--turqouise-light {
-  border-color: $turqouise-light !important;
-}
-
-.b--white {
-  border-color: $white !important;
-}
-
-.b--inherit {
-  border-color: inherit !important;
-}
-
-.b--transparent {
-  border-color: transparent !important;
+  .b-#{$color-name} {
+    border-color: #{$color-value} !important;
+  }
 }
