--- a/styles/cads-support/lib/radio.scss
+++ b/styles/cads-support/lib/radio.scss
@@ -11,7 +11,7 @@
 
     &::before {
       @extend .ba;
-      @extend .b--light-grey;
+      @extend .b-light-grey;
       @extend .br1;
       @extend .bw1;
       background-color: #f2f2f2;
@@ -28,19 +28,19 @@
     &:checked {
       &::before {
         @extend .bg-blue-mid;
-        @extend .b--blue-primary;
+        @extend .b-blue-primary;
       }
     }
 
     &:hover {
       &::before {
-        @extend .b--grey;
+        @extend .b-grey;
       }
     }
 
     &:focus {
       &::before {
-        @extend .b--heritage-yellow;
+        @extend .b-heritage-yellow;
       }
     }
   }
