--- a/styles/cads-support/lib/variables.scss
+++ b/styles/cads-support/lib/variables.scss
@@ -28,32 +28,33 @@ $box-shadow-4: 2px 2px 8px 0px rgba(0, 0, 0, 0.2) !default;
 $box-shadow-5: 4px 4px 8px 0px rgba(0, 0, 0, 0.2) !default;
 
 // breakpoints
-$breakpoint-not-small: "screen and (min-width: 48em)" !default;
+$breakpoint-not-small: "screen and (min-width: 48em)" !default; // min 768px
 $breakpoint-medium: "screen and (min-width: 48em) and (max-width: 64em)" !default;
 $breakpoint-large: "screen and (min-width: 64em)" !default;
 
-// colours
-$heritage-blue: #004b88;
-$heritage-yellow: #fcbb69;
-$heritage-blue-40: #97a8cc;
-$heritage-yellow-40: #fde5c4;
-$blue-dark: #229cff;
-$blue-primary: #8ac4ff;
-$blue-mid: #caeaff;
-$blue-light: #f2f8ff;
-$turquoise-dark: #5cc0b5;
-$turqouise-primary: #81cec6;
-$turqouise-mid: #b8e3df;
-$turqouise-light: #eaf9f7;
-$red-primary: #df3034;
-$red-light: #fae1e1;
-$black: #000000;
-$dark-grey: #333333;
-$mid-grey: #606060;
-$grey: #9f9f9f;
-$light-grey: #dfdfdf;
-$pale-grey: #f2f2f2;
-$white: #ffffff;
+
+
+$color-list: ("heritage-blue": #004b88,
+"heritage-blue-40": #97a8cc,
+"heritage-yellow-40": #fde5c4,
+"blue-dark": #229cff,
+"blue-primary": #8ac4ff,
+"blue-mid": #caeaff,
+"blue-light": #f2f8ff,
+"turquoise-dark": #5cc0b5,
+"turqouise-primary": #81cec6,
+"turqouise-mid": #b8e3df,
+"turqouise-light": #eaf9f7,
+"red-light": #fae1e1,
+"black": #000000,
+"dark-grey": #333333,
+"mid-grey": #606060,
+"grey": #9f9f9f,
+"light-grey": #dfdfdf,
+"pale-grey": #f2f2f2,
+"white": #ffffff,
+"heritage-yellow": #fcbb69,
+"red-primary": #df3034);
 
 // font family
 $sans-serif: -apple-system,
@@ -91,15 +92,13 @@ $letter-spacing-1: 0.1em !default;
 $letter-spacing-2: 0.25em !default;
 
 // spacing
-$spacing-none: 0 !default;
-$spacing-2xs: 0.25rem !default; // 4px
-$spacing-xs: 0.5rem !default; // 8px
-$spacing-sm: 0.75rem !default; // 12px
-$spacing-md: 1rem !default; // 16px
-$spacing-lg: 1.5rem !default; // 24px
-$spacing-xl: 2rem !default; // 32px
-$spacing-2xl: 2.5rem !default; // 40px
-
-.before-border:before {
+1: 0rem,
+2: 0.25rem,
+3: 0.5rem,
+4: 0.75rem,
+5: 1rem,
+6: 1.5rem,
+7: 2rem,
+8: 2.5rem .before-border:before {
   border-color: #004b88
 }
