added margin & padding sass

--- a/styles/cads-support/index.scss
+++ b/styles/cads-support/index.scss
@@ -36,9 +36,10 @@
 @import "./lib/hovers.scss";
 @import "./lib/letter-spacing.scss";
 @import "./lib/line-height.scss";
+@import "./lib/margins.scss";
 @import "./lib/outline.scss";
+@import "./lib/padding.scss";
 @import "./lib/position.scss";
-@import "./lib/spacing.scss";
 @import "./lib/typography.scss";
 @import "./lib/zindex.scss";
 
