--- a/styles/cads-support/lib/variables.scss
+++ b/styles/cads-support/lib/variables.scss
@@ -32,45 +32,34 @@ $breakpoint-not-small: "screen and (min-width: 48em)" !default; // min 768px
 $breakpoint-medium: "screen and (min-width: 48em) and (max-width: 64em)" !default;
 $breakpoint-large: "screen and (min-width: 64em)" !default;
 
-
-
-$color-list: ("heritage-blue": #004b88,
-"heritage-blue-40": #97a8cc,
-"heritage-yellow-40": #fde5c4,
-"blue-dark": #229cff,
-"blue-primary": #8ac4ff,
-"blue-mid": #caeaff,
-"blue-light": #f2f8ff,
-"turquoise-dark": #5cc0b5,
-"turqouise-primary": #81cec6,
-"turqouise-mid": #b8e3df,
-"turqouise-light": #eaf9f7,
-"red-light": #fae1e1,
-"black": #000000,
-"dark-grey": #333333,
-"mid-grey": #606060,
-"grey": #9f9f9f,
-"light-grey": #dfdfdf,
-"pale-grey": #f2f2f2,
-"white": #ffffff,
-"heritage-yellow": #fcbb69,
-"red-primary": #df3034);
+$color-list: (
+  "heritage-blue": #004b88,
+  "heritage-blue-40": #97a8cc,
+  "heritage-yellow-40": #fde5c4,
+  "blue-dark": #229cff,
+  "blue-primary": #8ac4ff,
+  "blue-mid": #caeaff,
+  "blue-light": #f2f8ff,
+  "turquoise-dark": #5cc0b5,
+  "turqouise-primary": #81cec6,
+  "turqouise-mid": #b8e3df,
+  "turqouise-light": #eaf9f7,
+  "red-light": #fae1e1,
+  "black": #000000,
+  "dark-grey": #333333,
+  "mid-grey": #606060,
+  "grey": #9f9f9f,
+  "light-grey": #dfdfdf,
+  "pale-grey": #f2f2f2,
+  "white": #ffffff,
+  "heritage-yellow": #fcbb69,
+  "red-primary": #df3034
+);
 
 // font family
-$sans-serif: -apple-system,
-BlinkMacSystemFont,
-"avenir next",
-avenir,
-helvetica,
-"helvetica neue",
-ubuntu,
-roboto,
-noto,
-"segoe ui",
-arial,
-sans-serif !default;
-$serif: georgia,
-serif !default;
+$sans-serif: -apple-system, BlinkMacSystemFont, "avenir next", avenir, helvetica,
+  "helvetica neue", ubuntu, roboto, noto, "segoe ui", arial, sans-serif !default;
+$serif: georgia, serif !default;
 
 // height - MAY NEED TO BE LOOKED AT
 $height-1: 0.25rem !default; // 4px
@@ -91,14 +80,22 @@ $letter-spacing-tight: -0.05em !default;
 $letter-spacing-1: 0.1em !default;
 $letter-spacing-2: 0.25em !default;
 
+$sides: (
+  "a": "",
+  "t": "-top",
+  "r": "-right",
+  "b": "-bottom",
+  "l": "-left"
+);
+
 // spacing
-1: 0rem,
-2: 0.25rem,
-3: 0.5rem,
-4: 0.75rem,
-5: 1rem,
-6: 1.5rem,
-7: 2rem,
-8: 2.5rem .before-border:before {
-  border-color: #004b88
-}
+$scales: (
+  1: 0rem,
+  2: 0.25rem,
+  3: 0.5rem,
+  4: 0.75rem,
+  5: 1rem,
+  6: 1.5rem,
+  7: 2rem,
+  8: 2.5rem
+);
