added font-weight & line-height

--- a/styles/cads-support/index.scss
+++ b/styles/cads-support/index.scss
@@ -29,6 +29,7 @@
 @import "./lib/focus.scss";
 @import "./lib/font-colors.scss";
 @import "./lib/font-family.scss";
+@import "./lib/font-size.scss";
 @import "./lib/font-style.scss";
 @import "./lib/font-weight.scss";
 @import "./lib/forms.scss";
