--- a/styles/cads-support/lib/variables.scss
+++ b/styles/cads-support/lib/variables.scss
@@ -109,33 +109,33 @@ $scales: (
 h1,
 .h1 {
   // font-size: 28px;
-  @extend .f4;
-  line-height: 36px;
-  // line height 1.28
-  // potential line height 1.25 (35px)
-  // potential line height 1.2 (
-  font-weight: 800;
+  @extend .f-4;
+  // line-height: 36px;
+  @extend .lh-5;
+  // font-weight: 800;
+  @extend .fw-8;
   color: #004b88;
 }
 
 h2,
 .h2 {
   // font-size: 20px;
-  @extend .f3;
-  line-height: 28px;
-  // line height 1.4
-  // potential line height 1.5 (30px)
-  font-weight: 700;
+  @extend .f-3;
+  // line-height: 28px;
+  @extend .lh-3;
+  // font-weight: 700;
+  @extend .fw-7;
   color: #004b88;
 }
 
 h3,
 .h3 {
   // font-size: 20px;
-  @extend .f3;
-  line-height: 28px;
+  @extend .f-3;
   // line height 1.4
-  font-weight: 600;
+  line-height: 28px;
+  // font-weight: 600;
+  @extend .fw-6;
   color: #004b88;
 }
 
@@ -144,8 +144,9 @@ h3,
   h1,
   .h1 {
     // font-size: 36px;
-    @extend .f5;
-    line-height: 48px;
+    @extend .f-5-ns;
+    // line-height: 48px;
+    @extend .lh-5-ns;
     font-weight: 800;
     color: #004b88;
   }
@@ -153,8 +154,9 @@ h3,
   h2,
   .h2 {
     // font-size: 28px;
-    @extend .f4;
-    line-height: 36px;
+    @extend .f-4-ns;
+    // line-height: 36px;
+    @extend .lh-4-ns;
     font-weight: 700;
     color: #004b88;
   }
@@ -162,8 +164,9 @@ h3,
   h3,
   .h3 {
     // font-size: 20px;
-    @extend .f3;
-    line-height: 28px;
+    @extend .f-3-ns;
+    // line-height: 28px;
+    @extend .lh-3-ns;
     font-weight: 600;
     color: #004b88;
   }
@@ -172,56 +175,25 @@ h3,
 p,
 .p {
   // font-size: 16px;
-  @extend .f2;
-  line-height: 24px;
+  @extend .f-2;
+  // line-height: 24px;
+  @extend .lh-2;
   font-weight: 400;
   color: #004b88;
 }
 
-$font-size-1: 14px;
-$font-size-2: 16px;
-$font-size-3: 20px;
-$font-size-4: 28px;
-$font-size-5: 36px;
+$line-height: (
+  1: 20px,
+  2: 24px,
+  3: 28px,
+  4: 36px,
+  5: 48px
+);
 
-$line-height-1: 20px;
-$line-height-2: 24px;
-$line-height-3: 28px;
-$line-height-4: 36px;
-$line-height-5: 48px;
-
-.f1 {
-  font-size: $font-size-1;
-}
-.f2 {
-  font-size: $font-size-2;
-}
-.f3 {
-  font-size: $font-size-3;
-}
-.f4 {
-  font-size: $font-size-4;
-}
-.f5 {
-  font-size: $font-size-5;
-}
-
-.lh-1 {
-  line-height: $font-size-1;
-}
-
-.lh-2 {
-  line-height: $font-size-2;
-}
-
-.lh-3 {
-  line-height: $font-size-3;
-}
-
-.lh-4 {
-  line-height: $font-size-4;
-}
-
-.lh-5 {
-  line-height: $font-size-5;
-}
+$font-size: (
+  1: 14px,
+  2: 16px,
+  3: 20px,
+  4: 28px,
+  5: 36px
+);
