Major restructure for cads!

--- a/styles/cads/base/lib/normalize.scss
+++ b/styles/cads/base/lib/normalize.scss
@@ -1,8 +1,7 @@
 // ========================================================
-// @cads-support: normalize
+// @cads-base: normalize
 // ========================================================
 //
-
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
