--- a/styles/cads/radios/lib/radios.scss
+++ b/styles/cads/radios/lib/radios.scss
@@ -1,5 +1,5 @@
 // ========================================================
-// @cads-support: radios
+// @cads-component: radios
 // ========================================================
 //
 
