--- a/styles/cads/support/index.scss
+++ b/styles/cads/support/index.scss
@@ -1,5 +1,5 @@
 // ========================================================
-// @cads-support: index
+// @cads-support
 // ========================================================
 //
 
