--- a/styles/cads/support/lib/typography.scss
+++ b/styles/cads/support/lib/typography.scss
@@ -3,6 +3,8 @@
 // ========================================================
 //
 
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
+
 $font-size-1: 14px;
 $font-size-2: 16px;
 $font-size-3: 20px;
